--- a/windows/requirements.txt
+++ b/windows/requirements.txt
@@ -1,36 +1,39 @@
-ansi==0.3.6
-bitstring==3.1.9
-black==23.1.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.0.1
-click==8.1.3
-colorlog==6.7.0
+ansi==0.3.7
+bitarray==2.9.2
+bitstring==4.2.3
+black==24.4.2
+certifi==2024.6.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorlog==6.8.2
 contextlib2==21.6.0
-cryptography==39.0.1
-dataclass-wizard==0.22.2
-ecdsa==0.18.0
-esptool==4.4
-gitdb==4.0.10
-GitPython==3.1.29
-heatshrink2==0.12.0
-idna==3.4
-lxml==4.9.2
+cryptography==42.0.8
+dataclass-wizard==0.22.3
+ecdsa==0.19.0
+esptool==4.7.0
+gitdb==4.0.11
+heatshrink2==0.13.0
+idna==3.7
+intelhex==2.3.0
+lxml==5.2.2
+mypy==1.10.1
 mypy-extensions==1.0.0
-packaging==23.0
-pathspec==0.11.0
-Pillow==9.4.0
-platformdirs==3.0.0
-protobuf==4.21.12
-pycparser==2.21
+packaging==24.1
+pathspec==0.12.1
+pillow==10.4.0
+platformdirs==4.2.2
+protobuf==4.25.3
+pycparser==2.22
+pyelftools==0.31
 pyserial==3.5
 python3-protobuf==2.5.0
-PyYAML==6.0
-reedsolo==1.5.4
-requests==2.28.2
-schema==0.7.5
-SCons==4.6.0
-pyelftools==0.29
+PyYAML==6.0.1
+reedsolo==1.7.0
+requests==2.32.3
+schema==0.7.7
+SCons==4.7.0
 six==1.16.0
-smmap==5.0.0
-urllib3==1.26.14
+smmap==5.0.1
+typing_extensions==4.12.2
+urllib3==2.2.2
