--- a/darwin/requirements.txt
+++ b/darwin/requirements.txt
@@ -2,7 +2,8 @@ ansi==0.3.7
 bitarray==2.9.2
 bitstring==4.2.3
 black==24.4.2
-certifi==2024.6.2
+certifi==2024.07.04
+cxxheaderparser==1.3.3
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
