--- a/linux/Dockerfile-x86_64
+++ b/linux/Dockerfile-x86_64
@@ -84,17 +84,20 @@ RUN tar -xvf /toolchain/src/src/archives/protobuf-cpp-3.21.7.tar.gz -C /toolchai
 RUN mv /toolchain/src/src/protobuf-3.21.7 /toolchain/src/src/protobuf
 
 ADD https://github.com/llvm/llvm-project/releases/download/llvmorg-18.1.8/llvm-18.1.8.src.tar.xz /toolchain/src/src/archives/
-RUN mkdir -p /toolchain/src/src/clang-format
-RUN tar -xvf /toolchain/src/src/archives/llvm-18.1.8.src.tar.xz -C /toolchain/src/src/clang-format
+RUN mkdir -p /toolchain/src/src/llvm
+RUN tar -xvf /toolchain/src/src/archives/llvm-18.1.8.src.tar.xz -C /toolchain/src/src/llvm
 ADD https://github.com/llvm/llvm-project/releases/download/llvmorg-18.1.8/clang-18.1.8.src.tar.xz /toolchain/src/src/archives/
-RUN tar -xvf /toolchain/src/src/archives/clang-18.1.8.src.tar.xz -C /toolchain/src/src/clang-format/llvm-18.1.8.src/tools/
-RUN mv /toolchain/src/src/clang-format/llvm-18.1.8.src/tools/clang-18.1.8.src /toolchain/src/src/clang-format/llvm-18.1.8.src/tools/clang
+RUN tar -xvf /toolchain/src/src/archives/clang-18.1.8.src.tar.xz -C /toolchain/src/src/llvm/llvm-18.1.8.src/tools/
+RUN mv /toolchain/src/src/llvm/llvm-18.1.8.src/tools/clang-18.1.8.src /toolchain/src/src/llvm/llvm-18.1.8.src/tools/clang
 ADD https://github.com/llvm/llvm-project/releases/download/llvmorg-18.1.8/cmake-18.1.8.src.tar.xz /toolchain/src/src/archives/
-RUN tar -xvf /toolchain/src/src/archives/cmake-18.1.8.src.tar.xz -C /toolchain/src/src/clang-format/
-RUN mv /toolchain/src/src/clang-format/cmake-18.1.8.src /toolchain/src/src/clang-format/cmake
+RUN tar -xvf /toolchain/src/src/archives/cmake-18.1.8.src.tar.xz -C /toolchain/src/src/llvm/
+RUN mv /toolchain/src/src/llvm/cmake-18.1.8.src /toolchain/src/src/llvm/cmake
 ADD https://github.com/llvm/llvm-project/releases/download/llvmorg-18.1.8/third-party-18.1.8.src.tar.xz /toolchain/src/src/archives/
-RUN tar -xvf /toolchain/src/src/archives/third-party-18.1.8.src.tar.xz -C /toolchain/src/src/clang-format/
-RUN mv /toolchain/src/src/clang-format/third-party-18.1.8.src /toolchain/src/src/clang-format/third-party
+RUN tar -xvf /toolchain/src/src/archives/third-party-18.1.8.src.tar.xz -C /toolchain/src/src/llvm/
+RUN mv /toolchain/src/src/llvm/third-party-18.1.8.src /toolchain/src/src/llvm/third-party
+ADD https://github.com/llvm/llvm-project/releases/download/llvmorg-18.1.8/clang-tools-extra-18.1.8.src.tar.xz /toolchain/src/src/archives/
+RUN tar -xvf /toolchain/src/src/archives/clang-tools-extra-18.1.8.src.tar.xz -C /toolchain/src/src/llvm/
+RUN mv /toolchain/src/src/llvm/clang-tools-extra-18.1.8.src /toolchain/src/src/llvm/llvm-18.1.8.src/tools/clang/tools/extra
 
 ADD https://github.com/libusb/libusb/releases/download/v1.0.24/libusb-1.0.24.tar.bz2 /toolchain/src/src/archives/
 RUN tar -xvf /toolchain/src/src/archives/libusb-1.0.24.tar.bz2 -C /toolchain/src/src/
