--- a/linux/Dockerfile-x86_64
+++ b/linux/Dockerfile-x86_64
@@ -1,4 +1,4 @@
-FROM debian:11 as flipperzero-toolchain-linux-src
+FROM debian:11 AS flipperzero-toolchain-linux-src
 ADD https://developer.arm.com/-/media/Files/downloads/gnu/12.3.rel1/srcrel/arm-gnu-toolchain-src-snapshot-12.3.rel1.tar.xz /toolchain/src/src/archives/
 RUN DEBIAN_FRONTEND=noninteractive apt update && apt -y install build-essential xz-utils m4 bison flex texinfo file patchelf rsync
 RUN tar -xvf /toolchain/src/src/archives/arm-gnu-toolchain-src-snapshot-12.3.rel1.tar.xz -C /toolchain/src/src/
@@ -113,7 +113,7 @@ ADD scripts/relink.sh /usr/bin/
 ADD scripts/build-linux-flipper-tools.sh /toolchain/src/
 RUN bash /toolchain/src/build-linux-flipper-tools.sh
 
-FROM debian:11 as flipperzero-toolchain-linux
+FROM debian:11 AS flipperzero-toolchain-linux
 COPY --from=flipperzero-toolchain-linux-binutils /toolchain/linux-output-root /toolchain/linux-output-root
 COPY --from=flipperzero-toolchain-linux-gdb /toolchain/linux-output-root /toolchain/linux-output-root
 COPY --from=flipperzero-toolchain-linux-gcc /toolchain/linux-output-root /toolchain/linux-output-root
