--- a/windows/requirements.txt
+++ b/windows/requirements.txt
@@ -9,6 +9,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorlog==6.8.2
 contextlib2==21.6.0
+crc==7.1.0
 cryptography==43.0.1
 dataclass-wizard==0.22.3
 ecdsa==0.19.0
@@ -32,7 +33,7 @@ PyYAML==6.0.1
 reedsolo==1.7.0
 requests==2.32.3
 schema==0.7.7
-SCons==4.7.0
+SCons==4.8.1
 six==1.16.0
 smmap==5.0.1
 typing_extensions==4.12.2
